# arxiv-upvote-trends

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
arxiv_upvote_trends/: __init__.py  alphaxiv.py  bluesky.py  cache.py  dataset.py  gcs.py  hf.py  pdf.py  report.py  stats.py
tests/: test_alphaxiv.py  test_bluesky.py  test_cache.py  test_dataset.py  test_gcs.py  test_hf.py  test_main.py  test_pdf.py  test_report.py  test_stats.py
